Bug 14675 - Memory leak in the RPC server
Summary: Memory leak in the RPC server
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-19 15:00 UTC by Ralph Böhme
Modified: 2021-05-11 09:47 UTC (History)
7 users (show)

See Also:


Attachments
Excerpt from talloc report (22.45 KB, text/plain)
2021-03-19 15:00 UTC, Ralph Böhme
no flags Details
Patch for 4.13 and 4.14 cherry-picked from master (5.79 KB, patch)
2021-03-31 16:24 UTC, Ralph Böhme
slow: review? (jra)
vl: review+
Details
Additional patch for 4.13 and 4.14, cherry-picked from master (1.74 KB, patch)
2021-04-12 10:18 UTC, Samuel Cabrero
slow: review+
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2021-03-19 15:00:23 UTC
Created attachment 16561 [details]
Excerpt from talloc report

On a heavily loaded Samba printserver with several hundred queque it was noted that after upgrading from 4.6 to 4.13 smbd processes were eating up memory over the cause of a few days.

As an example the smbd process with the highest resided set size was

  PID USER      PR  NI    VIRT    RES    SHR S  %CPU %MEM     TIME+ COMMAND
 7657 WIN\pet+  20   0 1369160 398484   7824 S   0,0  2,5   1:02.80 smbd

398 MB...

talloc report of the process:

  full talloc report on 'null_context' (total 153473847 bytes in 2253252 blocks)

153 MB....

The talloc report has a myriad duplicate printer related metadata objects. The talloc report is 2M lines, still grinding through it.

Looking...
Comment 1 Samba QA Contact 2021-03-31 12:14:07 UTC
This bug was referenced in samba master:

4c3fb2a5912966a61e7ebdb05eb3231a0e1d6033
481176ec745c14b78fca68e01a61c83405a4b97b
12f516e4680753460e7fe8811e6c6ff70057580c
Comment 2 Ralph Böhme 2021-03-31 16:24:21 UTC
Created attachment 16575 [details]
Patch for 4.13 and 4.14 cherry-picked from master
Comment 3 Karolin Seeger 2021-04-01 10:26:55 UTC
Pushed to autobuild-v4-{14,13}-test.
Comment 4 Samba QA Contact 2021-04-01 11:27:04 UTC
This bug was referenced in samba v4-14-test:

55c76604ca2fac7348a6bddba1dfdc128c728f30
ed30ce7aa0cce39bf0e0a6a97afc8716873692fc
e85d111f54f7aa77803f1e9fef92d5dd97968fd9
Comment 5 Samba QA Contact 2021-04-01 12:20:11 UTC
This bug was referenced in samba v4-13-test:

890cc945e338bbe3047bee45772330ec32feb5a2
85b5657cbd685968045fcaad2e7d3323b902edc9
3644afc38c726a19f39f1d4f96badfb7827fb1a4
Comment 6 Samba QA Contact 2021-04-09 15:21:03 UTC
This bug was referenced in samba master:

1efa9ffd7ae77ebf22b28c12dd642a89991b75d2
Comment 7 Samuel Cabrero 2021-04-12 10:18:19 UTC
Created attachment 16587 [details]
Additional patch for 4.13 and 4.14, cherry-picked from master

Additional patch for 4.13 and 4.14
Comment 8 Karolin Seeger 2021-04-19 07:03:21 UTC
(In reply to Samuel Cabrero from comment #7)
Pushed to autobuild-v4-{14,13}-test.
Comment 9 Samba QA Contact 2021-04-19 07:54:04 UTC
This bug was referenced in samba v4-13-test:

2022e490d5e506b5b07b02578a68b124241bdad6
Comment 10 Samba QA Contact 2021-04-20 07:40:05 UTC
This bug was referenced in samba v4-14-test:

b74a079a202089644090094dac06d327ff31aeec
Comment 11 Samba QA Contact 2021-04-20 10:10:15 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.3):

55c76604ca2fac7348a6bddba1dfdc128c728f30
ed30ce7aa0cce39bf0e0a6a97afc8716873692fc
e85d111f54f7aa77803f1e9fef92d5dd97968fd9
b74a079a202089644090094dac06d327ff31aeec
Comment 12 Karolin Seeger 2021-04-20 11:12:29 UTC
Closing out bug report.

Thanks!
Comment 13 Samba QA Contact 2021-05-11 09:47:58 UTC
This bug was referenced in samba v4-13-stable:

890cc945e338bbe3047bee45772330ec32feb5a2
85b5657cbd685968045fcaad2e7d3323b902edc9
3644afc38c726a19f39f1d4f96badfb7827fb1a4
2022e490d5e506b5b07b02578a68b124241bdad6